Add lecture 1 content

--- a/lectures/01-hello-rust.slim
+++ b/lectures/01-hello-rust.slim
@@ -22,8 +22,7 @@
   list:
     Package manager
     Task runner
-    Подобно на <strong>mix</strong> в еликсир
-    Подобно на <strong>bundler</strong> в руби
+    Подобно на <strong>mix</strong> в elixir, <strong>bundler</strong> в ruby, <strong>npm</strong> в node.js
 
 = slide 'Rustc' do
   list:
@@ -32,13 +31,6 @@
 
 = slide 'Cargo' do
   em (demo)
-
-= slide 'Cargo-foobar' do
-  list:
-    Скрипт, който се казва <code>cargo-нещоси</code>, в пътя
-    <code>cargo нещоси</code>
-    <code>cargo twitter</code>
-    <code>cargo fmi</code>
 
 = slide 'Инсталация' do
   list:
@@ -57,13 +49,60 @@
       ' https://play.rust-lang.org/
 
 = slide 'Основни типове', 'Числа' do
-  list:
-    <code>i32</code>, <code>u32</code>
-    <code>i64</code>, <code>u64</code>
-    <code>i8</code>, <code>u8</code>
-    <code>isize</code>, <strong><code>usize</code></strong>
-    <strong>Няма</strong> <code>int</code> и <code>unsigned int</code>
-    Типа <code>u8</code> и типа <code>char</code> са напълно различни
+  <table>
+    <thead>
+      <tr>
+        <th rowspan="2">Length</th>
+        <th colspan="2">Rust</th>
+        <th colspan="2">C/C++</th>
+      </tr>
+      <tr>
+        <th>Signed</th>
+        <th>Unsigned</th>
+        <th>Signed</th>
+        <th>Unsigned</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>8-bit</td>
+        <td><code>i8</code></td>
+        <td><code>u8</code></td>
+        <td><code>char</code></td>
+        <td><code>unsigned char</code></td>
+      </tr>
+      <tr>
+        <td>16-bit</td>
+        <td><code>i16</code></td>
+        <td><code>u16</code></td>
+        <td><code>short</code></td>
+        <td><code>unsigned short</code></td>
+      </tr>
+      <tr>
+        <td>32-bit</td>
+        <td><code>i32</code></td>
+        <td><code>u32</code></td>
+        <td><code>int</code></td>
+        <td><code>unsigned int</code></td>
+      </tr>
+      <tr>
+        <td>64-bit</td>
+        <td><code>i64</code></td>
+        <td><code>u64</code></td>
+        <td><code>long long</code></td>
+        <td><code>unsigned long long</code></td>
+      </tr>
+      <tr>
+        <td>arch</td>
+        <td><code>isize</code></td>
+        <td><code>usize</code></td>
+        <td><code>long</code></td>
+        <td><code>unsigned long</code></td>
+      </tr>
+    </tbody>
+  </table>
+
+  Типа <code>u8</code> и типа <code>char</code> са напълно различни!
 
 = slide 'Основни типове', 'Числа (литерали)' do
   list:
@@ -79,46 +118,287 @@
     Hex: <code>0xDEADBEEF</code>
     Octal: <code>0o77</code>
     Binary: <code>0b1010011010</code>
-    Byte: <code>b'A'</code>
 
 = slide 'Основни типове', 'Числа (с плаваща запетая)' do
+  thead
+    tr
+      th Length
+      th Rust
+      th C/C++
+  tbody
+    tr
+      td 32-bit
+      td <code>f32</code>
+      td <code>float</code>
+    tr
+      td 64-bit
+      td <code>f64</code>
+      td <code>double</code>
+
   list:
-    <code>f32</code> ("float")
-    <code>f64</code> ("double")
-    <code>3.14</code>
-    <code>3.14_f64</code>
+    <code>3.14</code> // f64
+    <code>3.14_f32</code> // f32
+
+= slide 'Основни типове', 'bool' do
+  <code>true</code>
+  <code>false</code>
+
+  list:
+    Има големина 1 байт
+    Оператор за отрицание <code>!</code>
 
 = slide 'Променливи' do
 
   example:
     let pi: f64 = 3.14;
+    let pi      = 3.14;
+    let pi: f32 = 3.14;
+    let pi      = 3.14_f32;
+
+  Не може да се декларират множество променливи с едно <code>let</code> твърдение по конвенционалния начин
+
+  example:
+    let x = 5, y = 3;
+
+  <code>
+    error: expected one of `.`, `;`, `?`, or an operator, found `,`
+  </code>
 
 = slide 'No emoji' do
   p https://twitter.com/sgrif/status/839214027117105152 (TODO embed image)
 
-= slide 'Конвертиране между типове', '(type casting)' do
-  ' TODO
+  example:
+    fn main() {
+      let 😀 = 123;
+      println!("{:?}", 😀);
+    }
 
-= slide 'Операции с числа', 'аритметика' do
-  ' TODO
+  <code>
+    error: unknown start of token: \u{1f600}
+     --> src/main.rs:2:7
+      |
+    2 |   let 😀 = 123;
+      |       ^
 
-= slide 'Операции с числа', 'сравнения' do
-  ' TODO
-
-= slide 'Основни типове', 'bool' do
-  ' TODO
-
-= slide 'Control flow', 'if-клаузи' do
-  ' TODO
-
-= slide 'Control flow', 'цикли' do
-  ' TODO
-
-= slide 'Функции' do
-  ' TODO
+    error: Could not compile `playground`.
+  </code>
 
 = slide 'Коментари' do
-  ' TODO
+  Коментарите допринасят за четимостта на кода.
+
+  example:
+    // Hello world.
+
+  Коментарите започват с <code>//</code> и продължават до края на реда.
+
+  example:
+    // So we’re doing something complicated here, long enough that we need
+    // multiple lines of comments to do it! Whew! Hopefully, this comment will
+    // explain what’s going on.
+
+  Rust поддържа и <code>/* ... */</code>, но все още е предпочитано използването на <code>//</code>
+
+  example:
+    /*
+      Hello
+      world
+    */
+
+= slide 'Конвертиране между типове', '(type casting)' do
+  Ключовата дума <code>as</code>.
+
+  example:
+    let one = true as u8;
+    let two_hundred = -56i8 as u8;
+    let three = 3.14 as u32;
+
+  Конвертиране от по-голям тип към по-малък може да доведе до загуба на данни
+
+  example
+    let x = 0b11111111_00000001_u16;
+    let y = x as u8;
+
+    println!("{}", y); // ??
+
+  Правила за конвертиране:
+  list:
+    От числен тип към числен тип.
+    От <code>bool</code> или <code>char</code> към числен тип.
+    Има и още, но ще говорим за тях по-нататък
+
+= slide 'Операции с числа', 'аритметика' do
+  example:
+    let sum = 5 + 10;             // събиране
+    let difference = 95.5 - 4.3;  // изваждане
+    let product = 4 * 30;         // умножение
+    let quotient = 56.7 / 32.2;   // делене
+    let remainder = 43 % 5;       // остатък
+
+  Акумулативни операции
+
+  example:
+    sum += 100;
+    difference -= 4.0;
+    product *= 1;
+    quotient /= 1.2;
+    remainder %= 2;
+
+  Не може да прилагаме аритметичните операции върху числа от различни типове
+
+  example:
+    let x = 4_u32 - 1_u8;
+    let y = 1.2_f64 / 0.8_f32;
+
+  Нормалните аритметични операции ще хвърлят грешка при препълванe (overflow)
+
+  example:
+    let x = -1_i32 as u32;
+    x += 1;
+
+= slide 'Операции с числа', 'сравнения' do
+
+  example:
+    2   >   1;
+    x   <   95;
+    3   >=  3;
+    -10 <=  1;
+    a   ==  a;
+    5   !=  1000;
+
+  Всички оператори за сравнение връщат резултат от тип <code>bool</code>.
+
+= slide 'Control flow', 'if-клаузи' do
+  example:
+    if bool_expression {
+      // твърдения или изрази
+    } else if another_bool_expression {
+      // твърдения или изрази
+    } else {
+      // твърдения или изрази
+    }
+
+  list:
+    Няма кръгли скоби
+    <code>if</code> приема само булеви стойности за разлика от C/C++
+    <code>if-else</code> конструкцията е израз (expression)
+
+  example:
+    let x = if true {
+      5
+    } else {
+      3
+    }
+    println!("{}", x);
+
+  Rust няма тернарен оператор по тази причина
+
+= slide 'Control flow', 'цикли' do
+  example:
+    while bool_expression {
+      // твърдения или изрази
+    }
+
+  list:
+    Отново няма кръгли скоби
+    Може да се направи безкраен цикъл с <code>while true</code>, но не е препоричително
+
+  example:
+    loop {
+      // твърдения или изрази
+    }
+
+  list:
+    <coe>loop</code> предоставя на компилатора по добри възможности за оптимизация
+    Трябва да използваме ключовата дума <code>break</code> за да излезем от цикъла
+
+  example:
+    loop {
+      println!("Once");
+      break;
+    }
+
+  Визможно е да връщаме стойност от <code>loop</code> чрез <code>break</code>
+
+  example:
+    let x = loop {
+      break 1;
+    }
+    println!("{}", x);
+
+  Именувани цикли
+
+  example:
+    'a: loop {
+        'b: loop {
+            break 'a;
+        }
+        println!("John Cena");
+    }
+    println!("Hi!");
+
+  <code>'a</code> и <code>'b</code> се наричат етикети
+
+= slide 'Функции' do
+  example:
+    fn foo_bar() {
+      println!("example");
+    }
+
+  list:
+    <code>main</code> е една от най важните функции в езика (entry point)
+    Функциите в Rust използват <code>snake_case</code> конвенцията
+    Rust не прави разлика дали фунцията се декларира преди или след мястото където се използва
+
+  example:
+    f();
+    fn f() {
+        println!("Oh, Hi Mark!");
+    }
+    f();
+
+  Функция с параметри, която връща стойност:
+
+  example:
+    fn add(a: u32, b: u32) -> u32 {
+      // note no semicolon
+      a + b
+    }
+
+  list:
+    В Rust върнатана стойност е стойността на последния израз в тялото на функцията
+    Ако искаме да излезем от функцията преди последния ред, може да използваме <code>return</code>
+
+  example:
+    fn g(condition: bool) -> u32 {
+      if condition {
+        return 5;
+      }
+
+      1
+    }
+
+  Тъй като <code>if</code> е израз може да преобразуваме примера по следния начин
+
+  example:
+    fn g(condition: bool) -> u32 {
+      if condition {
+        5
+      } else {
+        1
+      }
+    }
+
+  Използване на <code>return</code> на последния ред от тялото на функцията се счита за лоша практика
+
+  example:
+    fn plus_one(val: u32) -> u32 {
+      // bad practice
+      return val + 1;
+    }
+
+  Ако не уточним типа на връщаната стойност от функцията тя е <code>()</code> по подразбиране
+
+  TODO explain tuples beforehand maybe?
 
 = slide 'Първо предизвикателство' do
   ' TODO функция, която смята числа на фибоначи
