--- a/lectures/01-hello-rust.slim
+++ b/lectures/01-hello-rust.slim
@@ -12,7 +12,6 @@
       Hello, world!
 
 = slide 'Няма ли и по-лесен начин?', '(има, разбира се)' do
-
   pre
     ' $ cargo new hello --bin
       $ cargo run
@@ -49,60 +48,60 @@
       ' https://play.rust-lang.org/
 
 = slide 'Основни типове', 'Числа' do
-  <table>
-    <thead>
-      <tr>
-        <th rowspan="2">Length</th>
-        <th colspan="2">Rust</th>
-        <th colspan="2">C/C++</th>
-      </tr>
-      <tr>
-        <th>Signed</th>
-        <th>Unsigned</th>
-        <th>Signed</th>
-        <th>Unsigned</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>8-bit</td>
-        <td><code>i8</code></td>
-        <td><code>u8</code></td>
-        <td><code>char</code></td>
-        <td><code>unsigned char</code></td>
-      </tr>
-      <tr>
-        <td>16-bit</td>
-        <td><code>i16</code></td>
-        <td><code>u16</code></td>
-        <td><code>short</code></td>
-        <td><code>unsigned short</code></td>
-      </tr>
-      <tr>
-        <td>32-bit</td>
-        <td><code>i32</code></td>
-        <td><code>u32</code></td>
-        <td><code>int</code></td>
-        <td><code>unsigned int</code></td>
-      </tr>
-      <tr>
-        <td>64-bit</td>
-        <td><code>i64</code></td>
-        <td><code>u64</code></td>
-        <td><code>long long</code></td>
-        <td><code>unsigned long long</code></td>
-      </tr>
-      <tr>
-        <td>arch</td>
-        <td><code>isize</code></td>
-        <td><code>usize</code></td>
-        <td><code>long</code></td>
-        <td><code>unsigned long</code></td>
-      </tr>
-    </tbody>
-  </table>
+  ' <table>
+      <thead>
+        <tr>
+          <th rowspan="2">Length</th>
+          <th colspan="2">Rust</th>
+          <th colspan="2">C/C++</th>
+        </tr>
+        <tr>
+          <th>Signed</th>
+          <th>Unsigned</th>
+          <th>Signed</th>
+          <th>Unsigned</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>8-bit</td>
+          <td><code>i8</code></td>
+          <td><code>u8</code></td>
+          <td><code>char</code></td>
+          <td><code>unsigned char</code></td>
+        </tr>
+        <tr>
+          <td>16-bit</td>
+          <td><code>i16</code></td>
+          <td><code>u16</code></td>
+          <td><code>short</code></td>
+          <td><code>unsigned short</code></td>
+        </tr>
+        <tr>
+          <td>32-bit</td>
+          <td><code>i32</code></td>
+          <td><code>u32</code></td>
+          <td><code>int</code></td>
+          <td><code>unsigned int</code></td>
+        </tr>
+        <tr>
+          <td>64-bit</td>
+          <td><code>i64</code></td>
+          <td><code>u64</code></td>
+          <td><code>long long</code></td>
+          <td><code>unsigned long long</code></td>
+        </tr>
+        <tr>
+          <td>arch</td>
+          <td><code>isize</code></td>
+          <td><code>usize</code></td>
+          <td><code>long</code></td>
+          <td><code>unsigned long</code> / <code>size_t</code></td>
+        </tr>
+      </tbody>
+    </table>
 
-  Типа <code>u8</code> и типа <code>char</code> са напълно различни!
+  p Типа <code>u8</code> и типа <code>char</code> са напълно различни!
 
 = slide 'Основни типове', 'Числа (литерали)' do
   list:
@@ -120,49 +119,54 @@
     Binary: <code>0b1010011010</code>
 
 = slide 'Основни типове', 'Числа (с плаваща запетая)' do
-  thead
-    tr
-      th Length
-      th Rust
-      th C/C++
-  tbody
-    tr
-      td 32-bit
-      td <code>f32</code>
-      td <code>float</code>
-    tr
-      td 64-bit
-      td <code>f64</code>
-      td <code>double</code>
+  table
+    thead
+      tr
+        th Length
+        th Rust
+        th C/C++
+    tbody
+      tr
+        td 32-bit
+        td <code>f32</code>
+        td <code>float</code>
+      tr
+        td 64-bit
+        td <code>f64</code>
+        td <code>double</code>
 
   list:
     <code>3.14</code> // f64
     <code>3.14_f32</code> // f32
 
 = slide 'Основни типове', 'bool' do
-  <code>true</code>
-  <code>false</code>
-
   list:
-    Има големина 1 байт
-    Оператор за отрицание <code>!</code>
+    <code>true</code>
+    <code>false</code>
+    Големина 1 байт
+
+= slide 'Основни типове', '()' do
+  table
+    thead
+      tr
+        th Rust
+        th C/C++
+    tbody
+      tr
+        td <code>()</code>
+        td <code>void</code>
 
 = slide 'Променливи' do
-
   example:
     let pi: f64 = 3.14;
     let pi      = 3.14;
     let pi: f32 = 3.14;
     let pi      = 3.14_f32;
 
-  Не може да се декларират множество променливи с едно <code>let</code> твърдение по конвенционалния начин
+  p Не може да се декларират множество променливи с едно <code>let</code> твърдение
 
   example:
-    let x = 5, y = 3;
-
-  <code>
-    error: expected one of `.`, `;`, `?`, or an operator, found `,`
-  </code>
+    let x = 5, y = 3;   // грешка
 
 = slide 'No emoji' do
   p https://twitter.com/sgrif/status/839214027117105152 (TODO embed image)
@@ -173,30 +177,24 @@
       println!("{:?}", 😀);
     }
 
-  <code>
-    error: unknown start of token: \u{1f600}
-     --> src/main.rs:2:7
-      |
-    2 |   let 😀 = 123;
-      |       ^
+  pre
+    ' error: unknown start of token: \u{1f600}
+      --> src/main.rs:2:7
+        |
+      2 |   let 😀 = 123;
+        |       ^
 
-    error: Could not compile `playground`.
-  </code>
+      error: Could not compile `playground`.
 
 = slide 'Коментари' do
-  Коментарите допринасят за четимостта на кода.
-
-  example:
-    // Hello world.
-
-  Коментарите започват с <code>//</code> и продължават до края на реда.
+  p Едноредов коментар
 
   example:
     // So we’re doing something complicated here, long enough that we need
     // multiple lines of comments to do it! Whew! Hopefully, this comment will
     // explain what’s going on.
 
-  Rust поддържа и <code>/* ... */</code>, но все още е предпочитано използването на <code>//</code>
+  p Rust поддържа и блокови коментари <code>/* ... */</code>, но се предпочита използването на <code>//</code>
 
   example:
     /*
@@ -205,26 +203,20 @@
     */
 
 = slide 'Конвертиране между типове', '(type casting)' do
-  Ключовата дума <code>as</code>.
+  p Ключовата дума <code>as</code>.
 
   example:
     let one = true as u8;
     let two_hundred = -56i8 as u8;
     let three = 3.14 as u32;
 
-  Конвертиране от по-голям тип към по-малък може да доведе до загуба на данни
+  p Конвертиране от по-голям тип към по-малък може да доведе до загуба на данни
 
-  example
+  example:
     let x = 0b11111111_00000001_u16;
     let y = x as u8;
 
     println!("{}", y); // ??
-
-  Правила за конвертиране:
-  list:
-    От числен тип към числен тип.
-    От <code>bool</code> или <code>char</code> към числен тип.
-    Има и още, но ще говорим за тях по-нататък
 
 = slide 'Операции с числа', 'аритметика' do
   example:
@@ -234,8 +226,19 @@
     let quotient = 56.7 / 32.2;   // делене
     let remainder = 43 % 5;       // остатък
 
-  Акумулативни операции
+  p Не може да прилагаме аритметичните операции върху числа от различни типове
 
+  example:
+    let x = 4_u32 - 1_u8;         // грешка
+    let y = 1.2_f64 / 0.8_f32;    // грешка
+
+  p Aритметични операции хвърлят грешка при препълванe (integer overflow / underflow)
+
+  example:
+    let x = 255_u8;
+    let x = x + 1;                // 💥
+
+= slide 'Операции с числа', 'акумулативни операции' do
   example:
     sum += 100;
     difference -= 4.0;
@@ -243,20 +246,13 @@
     quotient /= 1.2;
     remainder %= 2;
 
-  Не може да прилагаме аритметичните операции върху числа от различни типове
+  p Няма оператори <code>++</code> и <code>--</code>
 
   example:
-    let x = 4_u32 - 1_u8;
-    let y = 1.2_f64 / 0.8_f32;
-
-  Нормалните аритметични операции ще хвърлят грешка при препълванe (overflow)
-
-  example:
-    let x = -1_i32 as u32;
     x += 1;
+    x -= 1;
 
 = slide 'Операции с числа', 'сравнения' do
-
   example:
     2   >   1;
     x   <   95;
@@ -265,7 +261,7 @@
     a   ==  a;
     5   !=  1000;
 
-  Всички оператори за сравнение връщат резултат от тип <code>bool</code>.
+  p Всички оператори за сравнение връщат резултат от тип <code>bool</code>.
 
 = slide 'Control flow', 'if-клаузи' do
   example:
@@ -277,86 +273,55 @@
       // твърдения или изрази
     }
 
-  list:
-    Няма кръгли скоби
-    <code>if</code> приема само булеви стойности за разлика от C/C++
-    <code>if-else</code> конструкцията е израз (expression)
-
-  example:
-    let x = if true {
-      5
-    } else {
-      3
-    }
-    println!("{}", x);
-
-  Rust няма тернарен оператор по тази причина
-
 = slide 'Control flow', 'цикли' do
+  list:
+    for in
+    работи с итератори
+
+  list:
+    while
+
   example:
     while bool_expression {
       // твърдения или изрази
     }
 
   list:
-    Отново няма кръгли скоби
-    Може да се направи безкраен цикъл с <code>while true</code>, но не е препоричително
+    loop
+    Същото като <code>while true</code>, но по-четимо
 
   example:
     loop {
       // твърдения или изрази
     }
 
-  list:
-    <coe>loop</code> предоставя на компилатора по добри възможности за оптимизация
-    Трябва да използваме ключовата дума <code>break</code> за да излезем от цикъла
-
+= slide 'Control flow', 'Именувани цикли' do
   example:
-    loop {
-      println!("Once");
-      break;
-    }
-
-  Визможно е да връщаме стойност от <code>loop</code> чрез <code>break</code>
-
-  example:
-    let x = loop {
-      break 1;
-    }
-    println!("{}", x);
-
-  Именувани цикли
-
-  example:
-    'a: loop {
-        'b: loop {
-            break 'a;
+    'outer: loop {
+        'inner: loop {
+            break 'outer;
         }
         println!("John Cena");
     }
-    println!("Hi!");
 
-  <code>'a</code> и <code>'b</code> се наричат етикети
+  p.action <code>'outer</code> и <code>'inner</code> се наричат етикети (labels)
 
 = slide 'Функции' do
   example:
-    fn foo_bar() {
-      println!("example");
+    fn main() {
+        println!("Hello, world!");
+        another_function();
     }
 
-  list:
-    <code>main</code> е една от най важните функции в езика (entry point)
-    Функциите в Rust използват <code>snake_case</code> конвенцията
-    Rust не прави разлика дали фунцията се декларира преди или след мястото където се използва
+    fn another_function() {
+        println!("Another function.");
+    }
 
+= slide 'Функции' do
   example:
-    f();
-    fn f() {
-        println!("Oh, Hi Mark!");
+    fn name(param1: Type1, param2: Type2) -> ResultType {
+      // тяло
     }
-    f();
-
-  Функция с параметри, която връща стойност:
 
   example:
     fn add(a: u32, b: u32) -> u32 {
@@ -365,40 +330,57 @@
     }
 
   list:
-    В Rust върнатана стойност е стойността на последния израз в тялото на функцията
+    Задаването на типове на параметрите и резултата е задължително (няма type inference)
+    Върнатана стойност е стойността на последния израз в тялото на функцията
     Ако искаме да излезем от функцията преди последния ред, може да използваме <code>return</code>
+    Използване на <code>return</code> на последния ред от тялото на функция се счита за лоша практика
+
+= slide 'Statements & Expressions' do
+  p.action Израз (expression)
+  list:
+    операция която връща резултат
+    <code>1</code>
+    <code>(2 + 3) * 4</code>
+    <code>add(5, 6)</code>
+    може да се присвои на променлива чрез <code>let</code>
+
+  p.action Твърдение (TODO: коректен ли е преводът?) (statement)
+  list:
+    няма резултат
+    <code>let x = 10;</code>
+    <code>return 25;</code>
 
   example:
-    fn g(condition: bool) -> u32 {
-      if condition {
-        return 5;
-      }
+    let x = (let y = 10);   // грешка
 
-      1
-    }
-
-  Тъй като <code>if</code> е израз може да преобразуваме примера по следния начин
+= slide 'Statements & Expressions' do
+  p if-else конструкцията е израз (expression)
 
   example:
-    fn g(condition: bool) -> u32 {
-      if condition {
-        5
-      } else {
-        1
-      }
-    }
+    let x = if true {
+      5
+    } else {
+      3
+    };
 
-  Използване на <code>return</code> на последния ред от тялото на функцията се счита за лоша практика
+  p Rust няма тернарен оператор по тази причина
+
+= slide 'Macros' do
+  list:
+    генериране на код
+    различава се от функциите по <code>!</code> след името
+    <code>println!</code>
+    <code>print!</code>
+
+= slide 'println! macro' do
+  list:
+    Принтиране на конзолата
+    <code>{}</code> placeholders
 
   example:
-    fn plus_one(val: u32) -> u32 {
-      // bad practice
-      return val + 1;
-    }
-
-  Ако не уточним типа на връщаната стойност от функцията тя е <code>()</code> по подразбиране
-
-  TODO explain tuples beforehand maybe?
+    let x = 5;
+    let y = 10;
+    println!("x = {} and y = {}", x, y);
 
 = slide 'Първо предизвикателство' do
   ' TODO функция, която смята числа на фибоначи
