--- a/html/layout.slim
+++ b/html/layout.slim
@@ -38,7 +38,7 @@ body
 
       ul
         li
-          a href="http://fmi.rust.bg/topics" http://fmi.rust.bg/
+          a href="http://fmi.rust-lang.bg/topics" http://fmi.rust-lang.bg/
   script src="js/jquery-1.5.2.min.js"
   script src="js/jquery.jswipe-0.1.2.js"
   script src="js/htmlSlides.js"
