Real link to rustup and forum post

--- a/lectures/01-hello-rust.slim
+++ b/lectures/01-hello-rust.slim
@@ -33,8 +33,8 @@
 
 = slide 'Инсталация' do
   list:
-    TODO тема във форумите с доста повече детайли
-    Rustup ([https://www.rustup.rs/](https://www.rustup.rs/))
+    [https://fmi.rust-lang.bg/topics/1](https://fmi.rust-lang.bg/topics/1)
+    Rustup ([https://rustup.rs/](https://rustup.rs/))
     <code>$ rustup install stable</code>
     <code>$ rustup doc</code>
 
@@ -47,9 +47,6 @@
   p
     a href="https://play.rust-lang.org/"
       ' https://play.rust-lang.org/
-
-= slide 'Първи шанс за точки' do
-  p Инсталирайте си rust! TODO topic link
 
 = slide 'Основни типове', 'Числа' do
   ' <table>
