--- a/lectures/05-enums-and-pattern-matching.slim
+++ b/lectures/05-enums-and-pattern-matching.slim
@@ -181,47 +181,43 @@
   p <code>match</code> може да върне стойност:
 
   example:
-    let y =
-      match x {
-          Some(val) => Some(val * val),
-          None => None,
-      };
+    let y = match x {
+        Some(val) => Some(val * val),
+        None => None,
+    };
 
 = slide 'Pattern Matching', 'Съпоставяне на образци' do
   p <code>match</code> може да върне стойност:
 
   example:
-    let y =
-      match x {
-          Some(val) => val * val,
-          None => 0,
-      };
+    let y = match x {
+        Some(val) => val * val,
+        None => 0,
+    };
 
 = slide 'Pattern Matching', 'Съпоставяне на образци' do
   p <code>match</code> може да излезе от функцията
 
   example:
-    let y =
-      match x {
-          Some(val) => val * val,
-          None => return None,
-      };
+    let y = match x {
+        Some(val) => val * val,
+        None => return None,
+    };
 
 = slide 'Pattern Matching', 'Съпоставяне на образци' do
   p <code>match</code> може да съдържа блокове от код:
 
   example:
-    let y =
-      match x {
+    let y = match x {
         Some(val) => {
-          println!("Will return {}", val * val);
-          Some(val * val)
+            println!("Will return {}", val * val);
+            Some(val * val)
         },
         None => {
-          println!("Will do nothing!!");
-          None
+            println!("Will do nothing!!");
+            None
         },
-      };
+    };
 
 = slide 'Pattern Matching', 'Съпоставяне на образци' do
   p Задължително трябва да се покрият всички случаи!
@@ -254,6 +250,7 @@
 
   example:
     let some_value = Some(0u8);
+
     match some_value {
         Some(3) => println!("three"),
         _ => (),
@@ -271,14 +268,14 @@
 
 = slide 'Pattern Matching', 'Guards (допълнителни условия)' do
   example:
-    let pair = (2, -2); // An example pair
+    let pair = (2, -2);
 
     match pair {
-        (x, y) if x == y => println!("One and the same"),
-        (x, y) if x + y == 0 => println!("Duality"),
-        (x, y) if x % 2 == 1 && y % 2 == 0 => println!("X is ODD and Y is EVEN"),
-        (x, _) if x % 2 == 1 => println!("X is ODD"),
-        _ => println!("Nothing special"),
+        (x, y) if x == y                   => println!("Едно и също"),
+        (x, y) if x + y == 0               => println!("Противоположни"),
+        (x, y) if x % 2 == 1 && y % 2 == 0 => println!("X е нечетно, Y е четно"),
+        (x, _) if x % 2 == 1               => println!("X е нечетно"),
+        _                                  => println!("Нищо интересно"),
     }
 
 = slide 'Pattern Matching', 'ranges' do
@@ -286,11 +283,11 @@
     let age: i32 = -5;
 
     match age {
-        n if n < 0 => println!("I don't exist yet, but will be born after {} years.", n.abs()),
-        0 => println!("I am a newborn."),
-        1 ... 12 => println!("I am a little child"),
-        13 ... 19 => println!("I am a noisy teen"),
-        _ => println!("I am an adult"),
+        n if n < 0 => println!("Ще се родя след {} години.", n.abs()),
+        0          => println!("Новородено съм."),
+        1 ... 12   => println!("Аз съм лапе."),
+        13 ... 19  => println!("Аз съм тийн."),
+        _          => println!("Аз съм дърт."),
     }
 
 = slide 'Pattern Matching', 'bindings' do
@@ -298,11 +295,11 @@
     let age: i32 = -5;
 
     match age {
-        n if n < 0 => println!("I don't exist yet, but will be born after {} years.", n.abs()),
-        0 => println!("I am a newborn."),
-        n @ 1 ... 12 => println!("I am a little child of age {}.", n),
-        n @ 13 ... 19 => println!("I am a noisy teen of age {}.", n),
-        n => println!("I am an adult of age {}.", n),
+        n if n < 0    => println!("Ще се родя след {} години.", n.abs()),
+        0             => println!("Новородено съм."),
+        n @ 1 ... 12  => println!("Аз съм лапе на {}.", n),
+        n @ 13 ... 19 => println!("Аз съм тийн на {}.", n),
+        n             => println!("Аз съм дърт, на {} съм вече.", n),
     }
 
 = slide 'Pattern Matching', 'multiple patterns' do
@@ -310,8 +307,8 @@
     let score: u32 = 5;
 
     match score {
-        0 | 1 => println!("bad score"),
-        _ => println!("good score"),
+        0 | 1 => println!("слабичко :("),
+        _     => println!("стаа"),
     }
 
 = slide 'Pattern Matching', 'structs' do
@@ -322,20 +319,18 @@
     }
 
     let user = User {
-        name: "Andy",
+        name: "Пешо",
         age: 12
     };
 
     match user {
-        User { name: "Andy", age: _ } => println!("Hello, Andy"),
-        User { name: _, age: 12 } => println!("Hey, kiddo"),
-        User { name: x, .. } => println!("Hi, {}", x),
-        _ => println!("Greetings!")
+        User { name: "Пешо", age: _ } => println!("Ко стаа, Пешо"),
+        User { name: _, age: 12 }     => println!("Ко стаа, лапе"),
+        User { name: x, .. }          => println!("Ко стаа, {}", x),
+        _                             => println!("Ко стаа")
     }
 
 = slide 'Destructuring', 'ref' do
-  p Има ли грешка в кода?
-
   example:
     #[derive(Debug)]
     enum Token {
@@ -343,23 +338,27 @@
         Number(f64)
     }
 
-    let token = Token::Text(String::from("The answer is 42"));
+    let token = Token::Text(String::from("Отговора е 42"));
 
     match token {
-        Token::Text(text) => println!("Our token is Text('{}')", text),
-        Token::Number(n) => println!("Our token is Number({})", n),
+        Token::Text(text) => println!("Токена е Text('{}')", text),
+        Token::Number(n) => println!("Токена е Number({})", n),
     }
 
-    println!("Our token was {:?} after all!", token);
+    // компилационна грешка, ползваме moved value, заради match-ването на `text`
+    println!("В крайна сметка, токена е {:?}!", token);
 
 = slide 'Destructuring', 'ref' do
   p Чрез `ref` стойността няма да се премести.
 
   example:
     match token {
-        Token::Text(ref text) => println!("Our token is Text('{}')", text),
-        Token::Number(n) => println!("Our token is Number({})", n),
+        Token::Text(ref text) => println!("Токена е Text('{}')", text),
+        Token::Number(n) => println!("Токена е Number({})", n),
     }
+
+    // няма грешка, `text` е взето като reference
+    println!("В крайна сметка, токена е {:?}!", token);
 
 = slide 'Destructuring', 'ref' do
   p Какво всъщност прави ref?
@@ -378,16 +377,15 @@
 = slide 'Destructuring', 'ref mut' do
   p Може би се досещате?
 
-= slide 'Destructuring', 'ref mut' do
   example:
-    let mut token = Token::Text(String::from("The answer is 42"));
+    let mut token = Token::Text(String::from("Отговора е 42"));
 
     match token {
         Token::Text(ref mut text) => {
-            *text = String::from("Maybe");
-            println!("Our token is Text('{}')", text)
+            *text = String::from("Може би");
+            println!("Токена е Text('{}')", text)
         },
-        Token::Number(n) => println!("Our token is Number({})", n),
+        Token::Number(n) => println!("Токена е Number({})", n),
     }
 
 = slide 'Destructuring', 'let' do
